# StatNLP-Framework

./: CMakeLists.txt  README.md  back_makelist.txt  main.cpp
Thunder-master/: CMakeLists.txt
cnn/cnn/: CMakeLists.txt
data/: hybridgrammar.txt  ptb-binary.test  ptb-binary.test.sample  ptb-binary.train.sample  test.model  test.txt  train.txt
data/conll2000/: sample_part_test.txt  sample_part_train.txt  sample_test.txt  sample_test_1.txt  sample_train.txt  sample_train_1.txt
data/conll2003/: additional_1_f  en.testa-1  en.testb-1  en.train-1  eng.testb-1  eng.testb.bak  eng.train-1
data/conll2003/output/: C++_latentfull-new  javanerfull-new  linearnerfull-new  neroutput_latent_full_cpp_1402iter
data/eval/: java-ner-part  latent  latent_bio  latent_bioe  linear  neroutput_latent_v2
data/geoquery/: geoFunql-de.corpus  geoFunql-de.init.corpus  geoFunql-el.corpus  geoFunql-el.init.corpus  geoFunql-en.corpus  geoFunql-th.corpus  geoFunql-th.init.corpus
data/geoquery-2012-08-27/splits/split-880/run-0/fold-0/: train-N20
data/model/: model.m
data/rel/: sample_test.txt  sample_train.txt
data/semi_example/: debug.txt
dynet/: CMakeLists.txt
dynet/cmake/: FindEigen3.cmake
dynet/data/: sample_part_dev.txt  sample_part_train.txt  small-dev.txt  small-dev.unk.txt  vocab.txt
dynet/doc/: make.bat
dynet/dynet/: dim.h  nodes-affinetransform.cc  nodes-argmax.cc  nodes-argmax.h  training.cc
dynet/eigen/demos/mandelbrot/: README
dynet/eigen/lapack/: clarfb.f  dlarfb.f  slarfb.f  zlarfb.f
dynet/examples/cpp-utils/: cl-args.h
dynet/examples/mnist/basic-mnist-benchmarks/: mnist_dynet_minibatch.py
dynet/examples/rnnlm/: train_rnnlm.cc
dynet/examples/rnnlm/data/: clusters-mkcls.txt  clusters.txt  sample_train.txt  sample_valid.txt  test.txt  valid.txt
dynet/examples/tensorboard/: README.md
dynet/examples/variational-autoencoder/basic-image-recon/: requirements.txt
dynet/tutorial/: 1_linear_regression.cc
src/common/: CMakeLists.txt  common.h
src/common/opt/: CMakeLists.txt  lbfgs.cpp  lbfgs.h  math_calc.cpp  math_calc.h  tools.h
src/common/types/: CMakeLists.txt  Instance.h  base_instance.cpp  base_instance.h  binarytree.cpp  binarytree.h  common.h  dependency_tree.h  instance.cpp  instance.h  linear_chain.h  new_base_instance.h  node.cpp  node.h  sentence.h  token.h  token_array.h  word_token.h
src/example/: linear_crf_feature_manager.cpp  linear_crf_feature_manager.h  linear_crf_instance.cpp  linear_crf_instance.h  linear_crf_network.cpp  linear_crf_network.h  linear_crf_network_compiler.cpp  linear_crf_nework_compiler.h
src/example/LinearCRF/: CMakeLists.txt  data_reader.h  linear_crf_feature_manager.cpp  linear_crf_feature_manager.h  linear_crf_instance.cpp  linear_crf_instance.h  linear_crf_lstm.cpp  linear_crf_lstm.h  linear_crf_main.cpp  linear_crf_network.cpp  linear_crf_network.h  linear_crf_network_compiler.cpp  linear_crf_nework_compiler.h  linear_crf_tag_bilstm.cpp  linear_crf_tag_bilstm.h
src/example/LinearNER/: CMakeLists.txt  entity.cpp  entity.h  entity_reader.h  evaluate_ner.h  linear_ne_feature_manager.cpp  linear_ne_feature_manager.h  linear_ne_instance.cpp  linear_ne_instance.h  linear_ne_main.cpp  linear_ne_network.cpp  linear_ne_network.h  linear_ne_network_compiler.cpp  linear_ne_network_compiler.h
src/example/ParsingCRF/: CMakeLists.txt  binarytree.cpp  binarytree.h  evaluate.h  label.h  node.cpp  node.h  parsing_crf_feature_manager.cpp  parsing_crf_feature_manager.h  parsing_crf_instance.h  parsing_crf_main.cpp  parsing_crf_network.h  parsing_crf_network_compiler.cpp  parsing_crf_network_compiler.h  ptb_reader.h  rule.h
src/example/Test/: CMakeLists.txt  test.cpp  test_compiler.h  test_featuremgr.h  test_instance.h  test_intance.cpp  test_network.cpp  test_network.h
src/example/TreeCRF/: CMakeLists.txt  binarytree.cpp  binarytree.h  evaluate.h  label.h  node.cpp  node.h  ptb_reader.h  rule.h  tree_crf_feature_manager.cpp  tree_crf_feature_manager.h  tree_crf_instance.h  tree_crf_intance.cpp  tree_crf_main.cpp  tree_crf_network.cpp  tree_crf_network.h  tree_crf_network_compiler.cpp  tree_crf_network_compiler.h
src/hybridnetworks/: CMakeLists.txt  builder.h  common.h  data_manager.cpp  data_manager.h  discriminative_network_model.cpp  discriminative_network_model.h  feature_array.cpp  feature_array.h  feature_manager.cpp  feature_manager.h  freelistbase.cpp  freelistbase.h  global_network_param.cpp  global_network_param.h  hypergraph.h  local_network_decoder_thread.cpp  local_network_decoder_thread.h  local_network_learner_thread.cpp  local_network_learner_thread.h  local_network_param.cpp  local_network_param.h  network.cpp  network.h  network_compiler.cpp  network_compiler.h  network_config.cpp  network_config.h  network_id_manager.cpp  network_id_manager.h  network_model.cpp  network_model.h  table_lookup_network.cpp  table_lookup_network.h
src/neural/: CMakeLists.txt  cnn_factory.cpp  cnn_factory.h  cnn_network.cpp  cnn_network.h  dynet_interface.cpp  dynet_interface.h  global_neural_network_param.cpp  global_neural_network_param.h  lstm_factory.cpp  lstm_factory.h  lstm_network.cpp  lstm_network.h  neural_factory.cpp  neural_factory.h  neural_input_output.cpp  neural_input_output.h  neural_layer.cpp  neural_layer.h  neural_network.cpp  neural_network.h  vanilla_rnn.cpp  vanilla_rnn.h
