cmake_minimum_required(VERSION 3.5)
set(SHARED_STATNLP_TYPE_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR})
if(TARGET statnlp_type_lib)
    message("statnlp_type_lib is already defined")
else()
    include_directories(${SHARED_STATNLP_TYPE_INCLUDE_DIR})
    set(LIB_TYPE_SRCS base_instance.h common.h dependency_tree.h instance.cpp linear_chain.h sentence.h token.h token_array.h word_token.h)
    add_library(statnlp_type_lib STATIC ${LIB_TYPE_SRCS})
endif()